kubernetes/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: netflix-clone-deployement
  namespace: netflix-clone
spec:
  replicas: 3
  selector:
    matchLabels:
      apps: netflix-clone
  template:
    metadata:
      labels:
        apps: netflix-clone
    spec:
      containers:
        - name: netflix-clone
          image: pkmadhubani/netflix-clone:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 100m
              memory: 125Mi
            limits:
              cpu: 200m
              memory: 256Mi
