kubernetes/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: netflix-clone-ingress
  namespace: netflix-clone
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: netflix-clone-service 
                port:
                  number: 80
